--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,14 @@ uvicorn[standard]>=0.27.0
 pydantic>=2.6.0
 pydantic-settings>=2.2.0
 
-# LLM
+# LLM - API moderna de LangChain 1.2+
 openai>=1.12.0
-langchain-openai>=0.0.5
-langchain-core>=0.1.20
-langchain>=0.1.0
+langchain>=1.2.0
+langchain-core>=1.2.0
+langchain-openai>=0.3.0
+langchain-text-splitters>=0.3.17
+langgraph>=0.2.0
+langgraph-checkpoint>=0.2.0
 
 # HTTP client
 httpx>=0.27.0
