Refactorizacion completa, falta implementar modo dev y mod prod

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,37 @@
-# OpenAI (agente especializado en reservas): gpt-4o-mini | gpt-4o
-OPENAI_API_KEY=oñoooooooooooooo
-OPENAI_MODEL=gpt-4o-mini
+# =============================================================================
+# Agente Reservas - MaravIA | Variables de entorno
+# =============================================================================
 
-# Configuración del servidor
+# OpenAI (agente especializado en reservas): gpt-4o-mini | gpt-4o
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_TIMEOUT=90
+OPENAI_TEMPERATURE=0.4
+MAX_TOKENS=2048
+
+# Servidor MCP
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8003
 
-# Base de datos (opcional para futuro)
+# Logging
+LOG_LEVEL=INFO
+# LOG_FILE=  (vacío = solo consola)
+
+# Timeouts (segundos) para llamadas HTTP a APIs propias
+API_TIMEOUT=10
+
+# Cache de horarios (minutos)
+SCHEDULE_CACHE_TTL_MINUTES=5
+
+# APIs MaravIA (agendar reunión, consultar disponibilidad, etc.)
+API_AGENDAR_REUNION_URL=https://api.maravia.pe/servicio/n8n/ws_agendar_reunion.php
+API_INFORMACION_URL=https://api.maravia.pe/servicio/ws_informacion_ia.php
+
+# Zona horaria (fecha/hora en prompts y validación)
+TIMEZONE=America/Lima
+
+# Base de datos (opcional, futuro)
 # DATABASE_URL=postgresql://user:pass@localhost:5432/reservas
 
-# Redis para memoria/cache (opcional)
+# Redis (opcional, futuro)
 # REDIS_URL=redis://localhost:6379/0
