--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-# MCP Server
-fastmcp>=0.2.0
-
-# Web framework (usado por fastmcp internamente)
+# Web framework
 fastapi>=0.110.0
 uvicorn[standard]>=0.27.0
 
